creat dz1 add style1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Ленеардо Ди Каприо</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+<div class="point">
+
 <h1>Ленеардо Ди Каприо</h1>
 <p>
     Леонардо Вильгельм Ди Каприо родился 11 ноября 1974 года в Лос-Анджелесе (Калифорния). Единственный ребёнок автора
@@ -25,9 +28,13 @@
     четыре года.
 </p>
 
+
+
 <img src="https://n1s1.elle.ru/bd/94/d8/bd94d8624477d778acea8e71e763a9e6/620x495_1_b5af77c7f0913cc540842b139da86606@700x559_0xd42ee42a_7600799051415698298.jpeg"
      alt="">
+</div>
 
+<div class="point">
 <h2>Карєра</h2>
 
 <p>
@@ -188,31 +195,40 @@
     (Оклахома), где происходит действия книги.
 
 </p>
-<h2>Топ-5 фільмів</h2>
+</div>
+
+<div class="target" id="uniq">
+
+<h2 class="point">Топ-5 фільмів</h2>
 <ul>
 
 
     <li>
-        <h3><a href="https://ru.wikipedia.org/wiki/Волк_с_Уолл-стрит">Волк с Уолл-стрит</a></h3>
+        <h3><a href="https://ru.wikipedia.org/wiki/Волк_с_Уолл-стрит"><span class="seg">Волк с Уолл-стрит</span></a></h3>
         <img src="https://upload.wikimedia.org/wikipedia/ru/7/72/Постер_фильма_«Волк_с_Уолл-стрит».jpg" alt="">
     </li>
+
+
     <li>
-        <h3><a href="https://ru.wikipedia.org/wiki/Выживший_(фильм,_2015)">Выживший</a></h3>
+        <h3><a href="https://ru.wikipedia.org/wiki/Выживший_(фильм,_2015)"><span class="seg">Выживший</span></a></h3>
         <img src="https://upload.wikimedia.org/wikipedia/ru/7/75/Постер_фильма_«Выживший»_%282015%29.jpg" alt="">
     </li>
+
     <li>
-        <h3><a href="https://ru.wikipedia.org/wiki/Начало_(фильм,_2010)">Начало</a></h3>
+        <h3><a href="https://ru.wikipedia.org/wiki/Начало_(фильм,_2010)"><span class="seg">Начало</span></a></h3>
         <img src="https://upload.wikimedia.org/wikipedia/ru/b/bc/Poster_Inception_film_2010.jpg" alt="">
     </li>
     <li>
-        <h3><a href="https://ru.wikipedia.org/wiki/Авиатор_(фильм,_2004)">Авиатор</a></h3>
+        <h3><a href="https://ru.wikipedia.org/wiki/Авиатор_(фильм,_2004)"><span class="seg">Авиатор</span></a></h3>
         <img src="https://upload.wikimedia.org/wikipedia/ru/9/9e/TheAviatorPoster.jpg" alt="">
     </li>
     <li>
-        <h3><a href="https://ru.wikipedia.org/wiki/Великий_Гэтсби_(фильм,_2013)">Великий Гэтсби</a></h3>
+        <h3><a href="https://ru.wikipedia.org/wiki/Великий_Гэтсби_(фильм,_2013)"><span class="seg">Великий Гэтсби</span></a></h3>
         <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/7/7a/Постер_фильма_«Великий_Гэтсби»_%282013%29.jpg/438px-Постер_фильма_«Великий_Гэтсби»_%282013%29.jpg"
              alt="">
     </li>
 </ul>
+
+</div>
 
 </body>
